--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
+        "friendsofsymfony/jsrouting-bundle": "^2.8",
         "knpuniversity/oauth2-client-bundle": "^2.13",
         "league/oauth2-google": "^4.0",
         "symfony/console": "5.2.*",
@@ -23,6 +24,7 @@
         "symfony/security-bundle": "5.2.*",
         "symfony/twig-bundle": "5.2.*",
         "symfony/validator": "5.2.*",
+        "symfony/webpack-encore-bundle": "^1.14",
         "symfony/yaml": "5.2.*"
     },
     "config": {
