--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,6 +25,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/dayPicture, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/dayPicture, roles: IS_AUTHENTICATED_FULLY }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
